--- a/www/wp-content/themes/galaxy/css/style.css
+++ b/www/wp-content/themes/galaxy/css/style.css
@@ -10859,8 +10859,7 @@ header.page-header-2 .header-row-right {
         position: relative;
         font-size: 14px;
         line-height: 23px;
-        font-family: 'Muli', sans-serif;
-        font-weight: 800;
+        font-weight: 600;
         padding: 5px 6px;
         text-decoration: none;
         color: #2e2e2e;
@@ -14815,4 +14814,37 @@ body:not(.home) {
 
 .modal-content form input.wpcf7-submit {
     margin-left: 38px;
+}
+
+#slider_reviews {
+    background: #f5f5f5;
+    padding: 55px 0 45px;
+    text-align: center;
+    font-size: 16px;
+}
+
+.rating i {
+    font-size: 10px;
+    padding: 0 1px;
+    color: #fede00;
+}
+
+#slider_reviews .username {
+    font-weight: bold;
+    padding: 0 0 0 10px;
+}
+
+#slider_reviews .userfrom {
+    color: #8c8c8c;
+    font-size: 14px;
+    padding: 0 0 0 10px;
+}
+
+#slider_reviews .text {
+    max-width: 830px;
+    margin: 15px auto 0
+}
+
+#slider_reviews .text p {
+    line-height: 2;
 }
