--- a/www/wp-content/themes/galaxy/css/style.css
+++ b/www/wp-content/themes/galaxy/css/style.css
@@ -14848,3 +14848,8 @@ body:not(.home) {
 #slider_reviews .text p {
     line-height: 2;
 }
+
+.testimonial-auto {
+    width: 80%;
+    margin: 40px auto;
+}
